--- a/school/university/zenith_university_college.html
+++ b/school/university/zenith_university_college.html
@@ -48,13 +48,6 @@
 		
 		<aside class="fixed skin-6">	
 			<div class="sidebar-inner scrollable-sidebar">
-				<div class="size-toggle">
-					<a class="btn btn-sm" id="sizeToggle">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</a>
-				</div><!-- /size-toggle -->
 				<div class="main-menu">
 					<ul>
 						<li>
@@ -265,7 +258,7 @@
 							<div class="panel-body">
 								<div class="tab-content">
 									<div class="tab-pane fade in active" id="about1">
-										<font color= "1a5b8f"><h4><strong>ZUC</strong></h4> </font>
+											<font color= "1a5b8f"><h3><strong>Zenith</strong></h3></font>
 										<p><strong>Zenith University College</strong></p><br>
 
 											<p>Zenith University College was established in December 2001 and placed in a unique position in the private tertiary education industry with a philosophy of providing borderless higher education to contribute its quota in tackling the problems that beset our TEI at present. Zenith University College took off as a tertiary institution in November 2005.</p><br>
@@ -275,8 +268,8 @@
 											<p>Zenith University College is a community of students and faculty from different parts of Africa and beyond unified in purpose with a common objective of pursuing academic and professional excellence in the wide range of programmes offered by the College. We have come to be known as the pace setters. We set the standards for others to follow.</p><br>
 
 											<p> What inspires people to study is their desire for new skills and knowledge. Many students are looking for a way to develop a new career. Studying does not only develop your professional abilities, it keeps you informed about the latest developments in your chosen field and the world around you.</p><br>
-It is our view that academic achievement and the acquisition of specialized professional skills should go hand-in-hand with the development of personal skills. Our programmes are of distinctive quality and impeccable reputation and lead to high paying job opportunities.
-All our programmes are recognised worldwide. They offer the flexibility of continuing with your education globally in more than 200 countries. </p><br>
+											It is our view that academic achievement and the acquisition of specialized professional skills should go hand-in-hand with the development of personal skills. Our programmes are of distinctive quality and impeccable reputation and lead to high paying job opportunities.
+											All our programmes are recognised worldwide. They offer the flexibility of continuing with your education globally in more than 200 countries. </p><br>
 							
 									</div>
 
@@ -420,7 +413,7 @@ All our programmes are recognised worldwide. They offer the flexibility of conti
 							<br>
 							
 							<h5 class="headline">
-							<p><strong>Slambooke ©2014  English (Gh)</strong></p>
+							<p>Slambooke © 2014</p>
 					</div><!-- /.col -->
 				</div><!-- /.row-->
 			</div><!-- /.padding20 -->
