--- a/school/university/university_of_professional_studies.html
+++ b/school/university/university_of_professional_studies.html
@@ -395,8 +395,8 @@
 					</a><!-- /image-wrapper -->
 				</div><!-- /gallery-item -->
 				<div class="gallery-item">
-					<a class="image-wrapper" data-lightbox="example-1" href="img/upsa/9.jpg">
-						<img src="img/upsa/9.jpg" alt="gallery4">
+					<a class="image-wrapper" data-lightbox="example-1" href="img/upsa/9.JPG">
+						<img src="img/upsa/9.JPG" alt="gallery4">
 						<div class="image-overlay">
 							<div class="image-info">
 								
