--- a/school/university/university_of_professional_studies.html
+++ b/school/university/university_of_professional_studies.html
@@ -260,7 +260,7 @@
 							<div class="panel-body">
 								<div class="tab-content">
 									<div class="tab-pane fade in active" id="about1">
-											<font color= "1a5b8f"><h3><strong>UPSA</strong></h3></font>
+											<font color= "1a5b8f"><h3><strong>UPS</strong></h3></font>
 										<p><strong>University of Professional Studies</strong></p><br>
 
 										<p>The University of Professional Studies, Accra (UPSA) is a public university that provides both academic and business professional education in Ghana. With over forty (40) years of experience, the University has gained a reputation as the oldest professional accountancy and management tuition provider having many of its products in key leadership positions in Ghana and elsewhere.<br>
