--- a/school/university/wisconsin_university.html
+++ b/school/university/wisconsin_university.html
@@ -48,13 +48,6 @@
 		
 		<aside class="fixed skin-6">	
 			<div class="sidebar-inner scrollable-sidebar">
-				<div class="size-toggle">
-					<a class="btn btn-sm" id="sizeToggle">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</a>
-				</div><!-- /size-toggle -->
 				<div class="main-menu">
 					<ul>
 						<li>
@@ -269,7 +262,7 @@
 							<div class="panel-body">
 								<div class="tab-content">
 									<div class="tab-pane fade in active" id="about1">
-										<font color= "1a5b8f"><h4><strong>WIUC</strong></h4> </font>
+											<font color= "1a5b8f"><h3><strong>Wisconsin</strong></h3></font>
 										<p><strong>Wisconsin International University College</strong></p><br>
 
 											<p>The Wisconsin International University College is one of the new private universities in Ghana. It is located at Agbogba Junction near Kwabenya in the Greater Accra Region of Ghana. It was established in January 2000 and is accredited by the National Accreditation Board as a university college certified through the University of Ghana and University of Cape Coast.<br>
@@ -342,7 +335,7 @@
 							<br>
 							
 							<h5 class="headline">
-							<p><strong>Slambooke ©2014  English (Gh)</strong></p>
+							<p>Slambooke © 2014</p>
 					</div><!-- /.col -->
 				</div><!-- /.row-->
 			</div><!-- /.padding20 -->
