--- a/school/university/all_nations_university_college.html
+++ b/school/university/all_nations_university_college.html
@@ -48,13 +48,6 @@
 		
 		<aside class="fixed skin-6">	
 			<div class="sidebar-inner scrollable-sidebar">
-				<div class="size-toggle">
-					<a class="btn btn-sm" id="sizeToggle">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</a>
-				</div><!-- /size-toggle -->
 				<div class="main-menu">
 					<ul>
 						<li>
@@ -266,7 +259,7 @@
 							<div class="panel-body">
 								<div class="tab-content">
 									<div class="tab-pane fade in active" id="about1">
-									<font color= "1a5b8f"><h4><strong>ANUC</strong></h4> </font>
+											<font color= "1a5b8f"><h3><strong>All Nations</strong></h3></font>
 										<p><strong>All Nations University College</strong></p><br>
 
 											<p>All Nations University College (ANUC) was established by the All Nations Full Gospel Church (ANFGC), Toronto, Canada through the All Nations International Development Agency (ANIDA). The Progenitor of the vision, Dr. Samuel Donkor challenged the African diaspora in North America to support the development of Africa by investing in Human Resource Development through quality higher education. The mission was to develop a new breed of leaders for the continent with holistic education that emphasizes academic excellence, Christian values, discipline and ethical values in a Christ centered environment.<br><br>
@@ -364,8 +357,8 @@
 					</a><!-- /image-wrapper -->
 				</div><!-- /gallery-item -->
 				<div class="gallery-item">
-					<a class="image-wrapper" data-lightbox="example-1" href="img/all_nations_univ/6.jpg">
-						<img src="img/all_nations_univ/6.jpg" alt="gallery4">
+					<a class="image-wrapper" data-lightbox="example-1" href="img/all_nations_univ/6.JPG">
+						<img src="img/all_nations_univ/6.JPG" alt="gallery4">
 						<div class="image-overlay">
 							<div class="image-info">
 								
@@ -421,7 +414,7 @@
 							<br>
 							
 							<h5 class="headline">
-							<p><strong>Slambooke ©2014  English (Gh)</strong></p>
+							<p>Slambooke © 2014</p>
 					</div><!-- /.col -->
 				</div><!-- /.row-->
 			</div><!-- /.padding20 -->
