--- a/school/university/all_nations_university_college.html
+++ b/school/university/all_nations_university_college.html
@@ -181,7 +181,7 @@
 								</div> 
 							</div> 
 							<br/>
-							<div class="h4 m-t m-b-xs"><strong>All Nations university College</strong></div> 
+							<div class="h4 m-t m-b-xs"><strong>All Nations University College</strong></div> 
 							<small class="text-muted m-b"><i class="octicon octicon-location"> </i> Koforidua</small>
 						</div> 
 						</div> 
