--- a/school/university/accra_institute_of_technology.html
+++ b/school/university/accra_institute_of_technology.html
@@ -554,8 +554,8 @@
 					</a><!-- /image-wrapper -->
 				</div><!-- /gallery-item -->
 				<div class="gallery-item">
-					<a class="image-wrapper" data-lightbox="example-1"  href="img/accra_institute_of_technology/20.JPG">
-						<img src="img/accra_institute_of_technology/20.JPG" alt="gallery4">
+					<a class="image-wrapper" data-lightbox="example-1"  href="img/accra_institute_of_technology/20.png">
+						<img src="img/accra_institute_of_technology/20.jpg" alt="gallery4">
 						<div class="image-overlay">
 							<div class="image-info">
 								
