--- a/school/university/central_university_college.html
+++ b/school/university/central_university_college.html
@@ -48,13 +48,6 @@
 		
 		<aside class="fixed skin-6">	
 			<div class="sidebar-inner scrollable-sidebar">
-				<div class="size-toggle">
-					<a class="btn btn-sm" id="sizeToggle">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</a>
-				</div><!-- /size-toggle -->
 				<div class="main-menu">
 					<ul>
 						<li>
@@ -267,7 +260,7 @@
 							<div class="panel-body">
 								<div class="tab-content">
 									<div class="tab-pane fade in active" id="about1">
-										<font color= "1a5b8f"><h4><strong>CUC</strong></h4> </font>
+											<font color= "1a5b8f"><h3><strong>CUC</strong></h3></font>
 										<p><strong>Central University College</strong></p><br>
 
 											<p>The Central University College is an initiative of the International Gospel Church (ICGC). It has its origins in a short-term pastorial training institute which was started in 1988. The College later expanded its programmes to include an integrated and practice-oriented business and to reflect its new status as a liberal arts university, the name was changed to Central University College in 1999.</p><br>
@@ -476,7 +469,7 @@
 							<br>
 							
 							<h5 class="headline">
-							<p><strong>Slambooke ©2014 English</strong></p>
+							<p>Slambooke © 2014</p>
 					</div><!-- /.col -->
 				</div><!-- /.row-->
 			</div><!-- /.padding20 -->
