--- a/school/university/valley_view_university_college.html
+++ b/school/university/valley_view_university_college.html
@@ -259,7 +259,7 @@
 							<div class="panel-body">
 								<div class="tab-content">
 									<div class="tab-pane fade in active" id="about1">
-									<font color= "1a5b8f"><h4><strong>VVU</strong></h4> </font>
+											<font color= "1a5b8f"><h3><strong>Valley View</strong></h3></font>
 										<p><strong>Valley View University College</strong></p><br>
 
 											<p>Valley View University, a coeducational institution, started in 1979 as an Adventist Missionary College at Bekwai-Ashanti. The college was later relocated to it's present site, (Oyibi near Dodowa) and was renamed Valley View College (VVC). <br><br>In 1997 the National Accreditation Board gave recognition to VVC as the first private degree-awarding institution in the country, thus the Accreditation Association of Adventist Schools, Colleges and Universities based in Silver Spring, Maryland, USA.</p><br>
