--- a/school/university/valley_view_university_college.html
+++ b/school/university/valley_view_university_college.html
@@ -308,8 +308,8 @@
 									<div class="tab-pane fade" id="photo1">
 										<div class="gallery-container">
 										<div class="gallery-item">
-					<a class="image-wrapper" data-lightbox="example-1" href="img/vvu/1.jpg">
-						<img src="img/vvu/1.jpg" alt="gallery1">		
+					<a class="image-wrapper" data-lightbox="example-1" href="img/vvu/1.JPG">
+						<img src="img/vvu/1.JPG" alt="gallery1">		
 						<div class="image-overlay">
 							
 						</div>	
