--- a/blackboard.html
+++ b/blackboard.html
@@ -212,7 +212,7 @@
 						<div class="panel panel-default">
 							<div class="panel-body">
 								<a class="pull-left avatar"> 
-									<img src="school/img/legon.jpg" class="img-" alt="school logo"> 
+									<img src="school/university/img/legon.jpg" class="img-" alt="school logo"> 
 								</a>
 								<div class="pull-left m-left-sm">
 									<strong class="font-14 block">University Of Ghana Legon </strong>
