--- a/blackboard.html
+++ b/blackboard.html
@@ -228,7 +228,7 @@
 						<div class="panel panel-default">
 							<div class="panel-body">
 								<a class="pull-left avatar"> 
-									<img src="school/img/knust.jpg" class="img-" alt="school logo"> 
+									<img src="school/university/img/knust.jpg" class="img-" alt="school logo"> 
 								</a>
 								<div class="pull-left m-left-sm">
 									<strong class="font-14 block">Kwame Nkrumah University</strong>
@@ -244,7 +244,7 @@
 						<div class="panel panel-default">
 							<div class="panel-body">
 								<a class="pull-left avatar"> 
-									<img src="school/img/ucc.png" class="img-" alt="school logo"> 
+									<img src="school/university/img/ucc.png" class="img-" alt="school logo"> 
 								</a>
 								<div class="pull-left m-left-sm">
 									<strong class="font-14 block">University of Cape Coast</strong>
@@ -260,7 +260,7 @@
 						<div class="panel panel-default">
 							<div class="panel-body">
 								<a class="pull-left avatar"> 
-									<img src="school/img/uds.jpg" class="img-" alt="school logo"> 
+									<img src="school/university/img/uds.jpg" class="img-" alt="school logo"> 
 								</a>
 								<div class="pull-left m-left-sm">
 									<strong class="font-14 block">University for Dev. Studies</strong>
@@ -276,7 +276,7 @@
 						<div class="panel panel-default">
 							<div class="panel-body">
 								<a class="pull-left avatar"> 
-									<img src="school/img/winneba.png" class="img-" alt="school logo"> 
+									<img src="school/university/img/winneba.png" class="img-" alt="school logo"> 
 								</a>
 								<div class="pull-left m-left-sm">
 									<strong class="font-14 block">University Of Education Winneba</strong>
@@ -292,7 +292,7 @@
 						<div class="panel panel-default">
 							<div class="panel-body">
 								<a class="pull-left avatar"> 
-									<img src="school/img/umat.png" class="img-" alt="school logo"> 
+									<img src="school/university/img/umat.png" class="img-" alt="school logo"> 
 								</a>
 								<div class="pull-left m-left-sm">
 									<strong class="font-14 block">University Of Mines & Technology</strong>
@@ -308,7 +308,7 @@
 						<div class="panel panel-default">
 							<div class="panel-body">
 								<a class="pull-left avatar"> 
-									<img src="school/img/zuc.jpg" class="img-circle" alt="school logo"> 
+									<img src="school/university/img/zuc.jpg" class="img-circle" alt="school logo"> 
 								</a>
 								<div class="pull-left m-left-sm">
 									<strong class="font-14 block">Zenith University College</strong>
@@ -324,7 +324,7 @@
 						<div class="panel panel-default">
 							<div class="panel-body">
 								<a class="pull-left avatar"> 
-									<img src="school/img/ashesi_logo1.png" class="img-" alt="school logo"> 
+									<img src="school/university/img/ashesi_logo1.png" class="img-" alt="school logo"> 
 								</a>
 								<div class="pull-left m-left-sm">
 									<strong class="font-14 block">Ashesi University College</strong>
@@ -340,7 +340,7 @@
 						<div class="panel panel-default">
 							<div class="panel-body">
 								<a class="pull-left avatar"> 
-									<img src="school/img/regent.jpg" class="img-" alt="school logo"> 
+									<img src="school/university/img/regent.jpg" class="img-" alt="school logo"> 
 								</a>
 								<div class="pull-left m-left-sm">
 									<strong class="font-14 block">Regent University College</strong>
@@ -356,7 +356,7 @@
 						<div class="panel panel-default">
 							<div class="panel-body">
 								<a class="pull-left avatar"> 
-									<img src="school/img/upsa.png" class="img-" alt="school logo"> 
+									<img src="school/university/img/upsa.png" class="img-" alt="school logo"> 
 								</a>
 								<div class="pull-left m-left-sm">
 									<strong class="font-14 block">University of Professional Studies</strong>
@@ -372,7 +372,7 @@
 						<div class="panel panel-default">
 							<div class="panel-body">
 								<a class="pull-left avatar"> 
-									<img src="school/img/wiuc.png" class="img-" alt="school logo"> 
+									<img src="school/university/img/wiuc.png" class="img-" alt="school logo"> 
 								</a>
 								<div class="pull-left m-left-sm">
 									<strong class="font-14 block">Wisconsin Int. University College</strong>
@@ -388,7 +388,7 @@
 						<div class="panel panel-default">
 							<div class="panel-body">
 								<a class="pull-left avatar"> 
-									<img src="school/img/pentecost.png" class="img-" alt="school logo"> 
+									<img src="school/university/img/pentecost.png" class="img-" alt="school logo"> 
 								</a>
 								<div class="pull-left m-left-sm">
 									<strong class="font-14 block">Pentecost University College</strong>
@@ -404,7 +404,7 @@
 						<div class="panel panel-default">
 							<div class="panel-body">
 								<a class="pull-left avatar"> 
-									<img src="school/img/anu.jpg" class="img-" alt="school logo"> 
+									<img src="school/university/img/anu.jpg" class="img-" alt="school logo"> 
 								</a>
 								<div class="pull-left m-left-sm">
 									<strong class="font-14 block">All Nations University College</strong>
@@ -420,7 +420,7 @@
 						<div class="panel panel-default">
 							<div class="panel-body">
 								<a class="pull-left avatar"> 
-									<img src="school/img/accra_institute_of_technology_logo.JPG" class="img-" alt="school logo"> 
+									<img src="school/university/img/accra_institute_of_technology_logo.JPG" class="img-" alt="school logo"> 
 								</a>
 								<div class="pull-left m-left-sm">
 									<strong class="font-14 block">Accra Institute of Technology</strong>
@@ -436,7 +436,7 @@
 						<div class="panel panel-default">
 							<div class="panel-body">
 								<a class="pull-left avatar"> 
-									<img src="school/img/uenr.png" class="img-" alt="school logo"> 
+									<img src="school/university/img/uenr.png" class="img-" alt="school logo"> 
 								</a>
 								<div class="pull-left m-left-sm">
 									<strong class="font-14 block">Uni. of Energy & Natural Resources</strong>
@@ -459,7 +459,7 @@
 						<div class="panel panel-default">
 								<div class="panel-body">
 									<a class="pull-left avatar"> 
-										<img src="school/img/central.png" class="img-" alt="school logo"> 
+										<img src="school/university/img/central.png" class="img-" alt="school logo"> 
 									</a>
 									<div class="pull-left m-left-sm">
 										<strong class="font-14 block">Central University College</strong>
@@ -475,7 +475,7 @@
 							<div class="panel panel-default">
 								<div class="panel-body">
 									<a class="pull-left avatar"> 
-										<img src="school/img/valleyview.jpg" class="img-circle" alt="school logo"> 
+										<img src="school/university/img/valleyview.jpg" class="img-circle" alt="school logo"> 
 									</a>
 									<div class="pull-left m-left-sm">
 										<strong class="font-14 block">Valley View University</strong>
@@ -492,7 +492,7 @@
 							<div class="panel panel-default">
 								<div class="panel-body">
 									<a class="pull-left avatar"> 
-										<img src="school/img/greenhill.png" class="img-" alt="school logo"> 
+										<img src="school/university/img/greenhill.png" class="img-" alt="school logo"> 
 									</a>
 									<div class="pull-left m-left-sm">
 										<strong class="font-14 block">Greenhill University</strong>
@@ -508,7 +508,7 @@
 							<div class="panel panel-default">
 								<div class="panel-body">
 									<a class="pull-left avatar"> 
-										<img src="school/img/methodist.jpg" class="img-" alt="school logo"> 
+										<img src="school/university/img/methodist.jpg" class="img-" alt="school logo"> 
 									</a>
 									<div class="pull-left m-left-sm">
 										<strong class="font-14 block">Methodist University College</strong>
@@ -524,7 +524,7 @@
 							<div class="panel panel-default">
 								<div class="panel-body">
 									<a class="pull-left avatar"> 
-										<img src="school/img/ghanatelecom.jpg" class="img-" alt="school logo"> 
+										<img src="school/university/img/ghanatelecom.jpg" class="img-" alt="school logo"> 
 									</a>
 									<div class="pull-left m-left-sm">
 										<strong class="font-14 block">Ghana Telecom University College</strong>
@@ -540,7 +540,7 @@
 							<div class="panel panel-default">
 								<div class="panel-body">
 									<a class="pull-left avatar"> 
-										<img src="school/img/puc.jpg" class="img-" alt="school logo"> 
+										<img src="school/university/img/puc.jpg" class="img-" alt="school logo"> 
 									</a>
 									<div class="pull-left m-left-sm">
 										<strong class="font-14 block">Presbyterian University College</strong>
@@ -556,7 +556,7 @@
 							<div class="panel panel-default">
 								<div class="panel-body">
 									<a class="pull-left avatar"> 
-										<img src="school/img/catholic_university.png" class="img-" alt="school logo"> 
+										<img src="school/university/img/catholic_university.png" class="img-" alt="school logo"> 
 									</a>
 									<div class="pull-left m-left-sm">
 										<strong class="font-14 block">Catholic University</strong>
@@ -572,7 +572,7 @@
 							<div class="panel panel-default">
 								<div class="panel-body">
 									<a class="pull-left avatar"> 
-										<img src="school/img/iucg.jpg" class="img-circle" alt="school logo"> 
+										<img src="school/university/img/iucg.jpg" class="img-circle" alt="school logo"> 
 									</a>
 									<div class="pull-left m-left-sm">
 										<strong class="font-14 block">Islamic University College</strong>
@@ -588,7 +588,7 @@
 							<div class="panel panel-default">
 								<div class="panel-body">
 									<a class="pull-left avatar"> 
-										<img src="school/img/gbuc.jpg" class="img-" alt="school logo"> 
+										<img src="school/university/img/gbuc.jpg" class="img-" alt="school logo"> 
 									</a>
 									<div class="pull-left m-left-sm">
 										<strong class="font-14 block">Ghana Baptist University College</strong>
@@ -604,7 +604,7 @@
 							<div class="panel panel-default">
 								<div class="panel-body">
 									<a class="pull-left avatar"> 
-										<img src="school/img/rmu.jpg" class="img-" alt="school logo"> 
+										<img src="school/university/img/rmu.jpg" class="img-" alt="school logo"> 
 									</a>
 									<div class="pull-left m-left-sm">
 										<strong class="font-14 block">Regional Maritime University</strong>
@@ -620,7 +620,7 @@
 							<div class="panel panel-default">
 								<div class="panel-body">
 									<a class="pull-left avatar"> 
-										<img src="school/img/gij.JPG" class="img-" alt="school logo"> 
+										<img src="school/university/img/gij.JPG" class="img-" alt="school logo"> 
 									</a>
 									<div class="pull-left m-left-sm">
 										<strong class="font-14 block">Ghana Institute of Journalism</strong>
@@ -636,7 +636,7 @@
 							<div class="panel panel-default">
 								<div class="panel-body">
 									<a class="pull-left avatar"> 
-										<img src="school/img/christian_service_university_college.jpg" class="img-" alt="school logo"> 
+										<img src="school/university/img/christian_service_university_college.jpg" class="img-" alt="school logo"> 
 									</a>
 									<div class="pull-left m-left-sm">
 										<strong class="font-14 block">Christian Service Uni. College</strong>
@@ -652,7 +652,7 @@
 							<div class="panel panel-default">
 								<div class="panel-body">
 									<a class="pull-left avatar"> 
-										<img src="school/img/garden_city_university.jpg" class="img-" alt="school logo"> 
+										<img src="school/university/img/garden_city_university.jpg" class="img-" alt="school logo"> 
 									</a>
 									<div class="pull-left m-left-sm">
 										<strong class="font-14 block">Garden City University College</strong>
@@ -668,7 +668,7 @@
 							<div class="panel panel-default">
 								<div class="panel-body">
 									<a class="pull-left avatar"> 
-										<img src="school/img/uhas.jpg" class="img-" alt="school logo"> 
+										<img src="school/university/img/uhas.jpg" class="img-" alt="school logo"> 
 									</a>
 									<div class="pull-left m-left-sm">
 										<strong class="font-14 block">Univ. of Health and Allied Sciences</strong>
@@ -684,7 +684,7 @@
 							<div class="panel panel-default">
 								<div class="panel-body">
 									<a class="pull-left avatar"> 
-										<img src="school/img/nafti.png" class="img-" alt="school logo"> 
+										<img src="school/university/img/nafti.png" class="img-" alt="school logo"> 
 									</a>
 									<div class="pull-left m-left-sm">
 										<strong class="font-14 block">National Film and Television Inst.</strong>
