--- a/school/public_universities.html
+++ b/school/public_universities.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="Slambooke, Inc">
-    <link rel="icon" href="../img/favicon.png">
+    <link rel="icon" href="../university/img/favicon.png">
 
     <!-- Bootstrap core CSS -->
     <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -37,7 +37,7 @@
 	<div id="wrapper" class="preload">
 		<div id="top-nav" class="skin-3 fixed">
 			<div class="brand">
-			&nbsp;&nbsp;<img src="../img/slambookelogo.png" width="105px" height="20px">
+			&nbsp;&nbsp;<img src="../university/img/slambookelogo.png" width="105px" height="20px">
 			</div><!-- /brand -->
 			<button type="button" class="navbar-toggle pull-left" id="sidebarToggle">
 				<span class="icon-bar"></span>
@@ -170,7 +170,7 @@
 					<div class="col-md-12">
 						<div class="row">
 							<div class="col-md-3">
-								<img src="../img/world.png" height="140" class="animated bounceIn"></img>
+								<img src="../university/img/world.png" height="140" class="animated bounceIn"></img>
 
 								<br>
 								<br>
@@ -199,7 +199,7 @@
 									<strong>Ads</strong>
 									<span class="line"></span>
 								</h4>
-								<img src="../img/slambooke_ad_space.png" class="img-thumbnail">
+								<img src="../university/img/slambooke_ad_space.png" class="img-thumbnail">
 
 
 							</div><!-- /.col -->
@@ -231,7 +231,7 @@
 		        <div class="col-md-7 clearfix animated bounceInRight">
 		           <div class="items info-block block-info clearfix">
 		                <div class="img-thumbnail pull-left">
-		                   <a href="university/university_of_ghana_legon.html"><img src="img/legon.jpg" height="90" width="90">
+		                   <a href="university/university_of_ghana_legon.html"><img src="university/img/legon.jpg" height="90" width="90">
 		                </div><h4><strong>&nbsp;&nbsp;&nbsp; <a href="university/university_of_ghana_legon.html">University of Ghana (LEGON)</a></strong></h4>
 		                <h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location" style="color:"> </i>  Legon, Greater Accra</h5>
 		                <span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> 030-250-0381</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> pad@ug.edu.gh</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://www.ug.edu.gh//" target ="_blank"> www.ug.edu.gh</a></font>
@@ -239,14 +239,14 @@
 
 		            <div class="items info-block block-info clearfix">
 		                <div class="img-thumbnail pull-left">
-		                     <a href="university/knust.html"><img src="img/knust.jpg" height="90" width="90">
+		                     <a href="university/knust.html"><img src="university/img/knust.jpg" height="90" width="90">
 		                </div><h4><strong>&nbsp;&nbsp;&nbsp; <a href="university/knust.html">Kwame Nkrumah University of Science and Technology (KNUST)</a></strong></h4><h5> &nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location" style="color:"> </i>  Kumasi, Ashanti Region</h5>
 		                <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> 032-206-0331</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> registrar@knust.edu.gh</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href=" http://www.knust.edu.gh" target ="_blank"> www.knust.edu.gh</a></font>
 		            </div>
 
 		            <div class="items info-block block-info clearfix">
 		                <div class="img-thumbnail pull-left">
-		                   <a href="university/university_of_cape_coast.html"><img src="img/ucc.png" height="90" width="90">
+		                   <a href="university/university_of_cape_coast.html"><img src="university/img/ucc.png" height="90" width="90">
 		                </div><h4><strong>&nbsp;&nbsp;&nbsp; <a href="university/university_of_cape_coast.html">University of Cape Coast (UCC)</a></strong></h4>
 		                <h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location" style="color:"> </i>  Capecoast, Central Region</h5>
 		                <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> 033-213-2480</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> admissions@ucc.edu.gh</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href=" http://www.ucc.edu.gh/" target ="_blank"> www.ucc.edu.gh</a></font>
@@ -254,7 +254,7 @@
 
 		            <div class="items info-block block-info clearfix">
 		                <div class="img-thumbnail pull-left">
-		                    <a href="university/uds.html"> <img src="img/uds.jpg" height="90" width="90">
+		                    <a href="university/uds.html"> <img src="university/img/uds.jpg" height="90" width="90">
 		                </div><h4><strong>&nbsp;&nbsp;&nbsp; <a href="university/uds.html">University for Development Studies (UDS)</a></strong></h4>
 		                <h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location" style="color:"> </i>  Tamale, Northern Region</h5>
 		                <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> 037-202-2078</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> registrar@uds.edu.gh</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://www.uds.edu.gh" target ="_blank"> www.uds.edu.gh</a></font>
@@ -262,35 +262,35 @@
 
 		            <div class="items info-block block-info clearfix">
 		                <div class="img-thumbnail pull-left">
-		                   <a href="university/university_of_education_winneba.html"> <img src="img/winneba.png" height="90" width="90">
+		                   <a href="university/university_of_education_winneba.html"> <img src="university/img/winneba.png" height="90" width="90">
 		                </div><h4><strong>&nbsp;&nbsp;&nbsp; <a href="university/university_of_education_winneba.html">University Of Education (UEW)</a></strong></h4><h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location" style="color:"> </i>  Winneba, Central Region</h5>
 		                <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> 033-232-2021</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9">  ucew@ug.gn.apc.org </font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://uew.edu.gh/" target ="_blank"> www.uew.edu.gh</a></font>
 		            </div>
 
 		            <div class="items info-block block-info clearfix">
 		                <div class="img-thumbnail pull-left">
-		                   <a href="university/university_of_mines_and_technology.html"> <img src="img/umat.png" height="90" width="90">
+		                   <a href="university/university_of_mines_and_technology.html"> <img src="university/img/umat.png" height="90" width="90">
 		                </div><h4><strong>&nbsp;&nbsp;&nbsp; <a href="university/university_of_mines_and_technology.html">University Of Mines & Technology (UMAT)</a></strong></h4><h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location" style="color:"></i>  Tarkwa, Western Region</h5>
 		                <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> 031-232-0324</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> registrar@umat.edu.gh</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://umat.edu.gh/" target ="_blank"> www.umat.edu.gh</a></font>
 		            </div>
 
 		            <div class="items info-block block-info clearfix">
 		                <div class="img-thumbnail pull-left">
-		                    <a href="university/university_of_professional_studies.html"> <img src="img/upsa.png" height="100" width="90">
+		                    <a href="university/university_of_professional_studies.html"> <img src="university/img/upsa.png" height="100" width="90">
 		                </div><h4><strong>&nbsp;&nbsp;&nbsp;&nbsp;<a href="university/university_of_professional_studies.html">University of Professional Studies (UPSA)</a></strong></h4><h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location" style="color:"></i>  Accra, Greater Accra Region</h5>
 		                <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> 030-250-0171</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> admin@upsa.edu.gh</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://upsa.edu.gh//" target ="_blank"> www.upsa.edu.gh</a></font>
 		            </div>
 					
 					<div class="items info-block block-info clearfix">
 		                <div class="img-thumbnail pull-left" >
-		                    <a href="university/ghana_telecom_university_college.html"><img src="img/ghanatelecom.jpg" height="90" width="90"> 
+		                    <a href="university/ghana_telecom_university_college.html"><img src="university/img/ghanatelecom.jpg" height="90" width="90"> 
 		                </div><h4><strong>&nbsp;&nbsp;&nbsp; <a href="university/ghana_telecom_university_college.html">Ghana Telecom University College (GTUC)</a></strong></h4><h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location" style="color:"></i>  Abeka, Greater Accra Region</h5>
 		                <span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> 030-220-0611</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> admission@gtuc.edu.gh</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://gtuc.edu.gh/" target ="_blank"> www.gtuc.edu.gh</a></font>
 		            </div>
 
 		            <div class="items info-block block-info clearfix">
 		                <div class="img-thumbnail pull-left" >
-		                    <a href="university/ghana_institute_of_management_and_public_administration.html"><img src="img/greenhill.png" height="90" width="90"> 
+		                    <a href="university/ghana_institute_of_management_and_public_administration.html"><img src="university/img/greenhill.png" height="90" width="90"> 
 		                </div><h4><strong>&nbsp;&nbsp;&nbsp;<a href="university/ghana_institute_of_management_and_public_administration.html">Ghana Institute of Management and Public Administration (GIMPA)</a></strong></h4>
 		              	<h5>&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location" style="color:"></i>  Accra, Greater Accra Region</h5>
 		                <span>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> 030-240-1681-3</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> info@gimpa.edu.gh</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href=" http://www.gimpa.edu.gh/" target ="_blank"> www.gimpa.edu.gh</a></font>
