--- a/school/public_universities.html
+++ b/school/public_universities.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="Slambooke, Inc">
-    <link rel="icon" href="../university/img/favicon.png">
+    <link rel="icon" href="../img/favicon.png">
 
     <!-- Bootstrap core CSS -->
     <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -37,7 +37,7 @@
 	<div id="wrapper" class="preload">
 		<div id="top-nav" class="skin-3 fixed">
 			<div class="brand">
-			&nbsp;&nbsp;<img src="../university/img/slambookelogo.png" width="105px" height="20px">
+			&nbsp;&nbsp;<img src="../img/slambookelogo.png" width="105px" height="20px">
 			</div><!-- /brand -->
 			<button type="button" class="navbar-toggle pull-left" id="sidebarToggle">
 				<span class="icon-bar"></span>
@@ -170,7 +170,7 @@
 					<div class="col-md-12">
 						<div class="row">
 							<div class="col-md-3">
-								<img src="../university/img/world.png" height="140" class="animated bounceIn"></img>
+								<img src="../img/world.png" height="140" class="animated bounceIn"></img>
 
 								<br>
 								<br>
