--- a/school/public_universities.html
+++ b/school/public_universities.html
@@ -199,7 +199,7 @@
 									<strong>Ads</strong>
 									<span class="line"></span>
 								</h4>
-								<img src="../university/img/slambooke_ad_space.png" class="img-thumbnail">
+								<img src="../img/slambooke_ad_space.png" class="img-thumbnail">
 
 
 							</div><!-- /.col -->
